feat: JDK 21 업그레이드 및 가상 스레드 기반 성능·안정성 개선
  - build.gradle: Java toolchain 17 → 21 변경
  - Dockerfile: eclipse-temurin 17 → 21 변경
  - application.yml: 가상 스레드 활성화(spring.threads.virtual.enabled), HikariCP 풀 설정 명시
  - AsyncConfig: virtualThreadExecutor 빈 등록 (newVirtualThreadPerTaskExecutor)
  - CatalogService, GameReadService: 게임 상세 조회 시 DB I/O 병렬 처리 (CompletableFuture + 가상 스레드)
  - RankingService, GameVoteService: switch expression 적용으로 가독성 개선
  - AiService: getFirst() JDK 21 API 적용, RestClient 싱글턴화
  - CrawlerScheduler, ScrapingScheduler: RestClient 요청마다 생성하던 방식 → 필드 싱글턴으로 수정
  - AiDescriptionScheduler: @Transactional 제거 후 saveAll() 명시 저장으로 변경 (Thread.sleep 중 커넥션 점유 방지)
  - ScrapingEventListener: @Transactional → @Transactional(REQUIRES_NEW) 변경 (Spring Boot 3.5 @TransactionalEventListener 제약 대응)
  - GameRepositoryCustomImpl.findRelatedGames(): 엔티티 로딩 → DTO 프로젝션 + 장르 배치 조회로 변경 (LazyInitializationException 수정, N+1 해소)